--- a/frontend/src/app/home-page/home-page.component.html
+++ b/frontend/src/app/home-page/home-page.component.html
@@ -24,7 +24,7 @@
             <h>For Company</h>
             <p>We are the market–leading technical interview platform to identify and hire developers with the right skills.
             </p>
-            <p1 (click)="CompanySignUp()">Start Remote Hiring</p1>
+            <p1 routerLink="/auth/company">Start Remote Hiring</p1>
         </div>
         <div class="log-for-developer">
             <h>For Developer</h>
