--- a/frontend/src/app/jobpage/jobpage.component.css
+++ b/frontend/src/app/jobpage/jobpage.component.css
@@ -37,7 +37,30 @@
 .post{
     font-size: 17px;
 }
+.notmiswarn{margin: 5px auto;
+    text-align: center;
+    width: 100%;
+    color: rgb(182, 156, 156);
+}
 
+.fromwhom{
+    font-size: 17px;
+    color: rgb(71, 68, 68);
+}
+.titleof{
+    font-size: 15px;
+    color: rgb(167, 133, 133);
+}
+.displayfunction{
+    font-size: 13px;
+    color: rgb(57, 136, 156);
+}
+.form-area{
+    display: none;
+}
+.fnbtn{
+    margin-left: 50%;
+}
 #form{
     height: 30px;
     
@@ -79,4 +102,29 @@
     font-weight: bold;
     width:180px;
     height:30px;
+}
+#confbox{
+    background-color:rgb(255, 255, 255);
+    margin-top: 60px;
+    opacity: 1;
+    position: fixed;
+    left: 45%;
+    display: none;
+    width:300px;
+    height: 120px;
+    border: 1px solid rgb(204, 107, 155);
+    box-shadow: 0px 3px 10px rgb(189, 103, 146);
+    border-radius: 5px;
+}
+.sometext{
+   text-align: center;
+   margin: 4px auto;
+   color:rgb(105, 97, 97); 
+}
+.subbtn{
+    text-align: center;
+    margin: 20px auto auto auto;
+}
+.fnsbtn{
+    
 }
