--- a/frontend/src/app/c-manage/c-manage.component.css
+++ b/frontend/src/app/c-manage/c-manage.component.css
@@ -11,6 +11,11 @@
     font-family: MV Boli;
     margin-bottom: 40px;
 }
+.options{
+    margin:10px auto;
+    width:100%;
+    text-align: center;
+}
 .left{
     float: left;
     width: 49%;
@@ -25,6 +30,11 @@
     text-align: center;
     font-family: Lucida Sans Unicode;
 }
+.notmiswarn{margin: 5px auto;
+    text-align: center;
+    width: 100%;
+    color: rgb(182, 156, 156);
+}
 .open{
     border: 1px solid rgb(136, 136, 136);
     box-shadow: 0px 3px 10px rgb(148, 143, 143);
@@ -34,9 +44,24 @@
     padding-bottom: 20px;
 }
 .post{
-    font-size: 17px;
+    font-size: 20px;
+    margin-bottom: 3px;
 }
-
+.fromwhom{
+    font-size: 17px;
+    color: rgb(71, 68, 68);
+}
+.titleof{
+    font-size: 15px;
+    color: rgb(167, 133, 133);
+}
+.displayfunction{
+    font-size: 13px;
+    color: rgb(57, 136, 156);
+}
+.form-area{
+    display: none;
+}
 #form{
     height: 30px;
     
@@ -77,4 +102,136 @@
     font-weight: bold;
     width:160px;
     height:30px;
+}
+#createjob{
+    margin-top: -100px;
+    background-color:rgb(229, 240, 240);
+    opacity: 1;
+    position: absolute;
+    left: 25%;
+    display: none;
+    width:700px;
+    height: auto;
+    margin-bottom: 50px;
+    border: 1px solid black;
+}
+.createjob-header{
+    font-size: 20px;
+    color: rgb(173, 166, 166);
+    text-align: center;
+    margin: 10px auto;
+}
+.details-cont{
+    text-align: center;
+}
+.forpost{
+    margin-bottom: 5px;
+    padding:10px;
+    font-size: 15px;
+    border: 1px solid transparent;
+    width: 65%;
+    background-color: transparent;
+    height: 20px;
+    border-bottom: 1px solid rgb(170, 167, 167);
+    color: rgb(75, 71, 71);
+}
+.bywhom{
+    font-size: 15px;
+    padding:10px;
+    background-color: transparent;
+    width: 65%;
+    height: 20px;
+    border: 1px solid transparent;
+    border-bottom: 1px solid rgb(170, 167, 167);
+}
+input:focus
+{   outline: transparent;
+    border: 1px solid transparent;
+    border-bottom: 1px solid rgb(170, 167, 167);
+}
+textarea:focus
+{   outline: transparent;
+    border: 1px solid transparent;
+    border-bottom: 1px solid rgb(170, 167, 167);
+}
+.descrip{
+    font-size: 15px;
+    padding:10px;
+    background-color: transparent;
+    width: 75%;
+    height: 70px;
+    margin:10px auto;
+    border: 1px solid transparent;
+    border-bottom: 1px solid rgb(170, 167, 167);
+}
+.headskiledit{
+    height: 10px;
+    text-align: center;
+    display: block;
+    width: 100%;
+    font-size: 10px;
+    margin:3px;
+}
+.skill-list{
+    text-align: center;
+}
+.recomendedskills{
+    width: 96%;
+    text-align: center;
+    margin-top: 70px;
+    display: block;
+    height: auto;
+    max-height: 70px;
+    overflow-x: hidden;
+    overflow-y: auto;
+    padding:5px;
+
+}
+.enter-skill-input{
+    font-size: 15px;
+    padding:10px;
+    background-color: transparent;
+    width: 65%;
+    height: 20px;
+    border: 1px solid transparent;
+    border-bottom: 1px solid rgb(170, 167, 167);
+}
+.datepicking-cont{
+    text-align: center;
+    margin: 10px auto;
+}
+.details-cont label{
+    width:70px;
+    font-size: 15px;
+    color: rgb(170, 167, 167);
+}
+.function-cont{
+    text-align: center;
+    margin:10px auto;
+
+}
+.fnbtn{
+    margin:5px;
+}
+#confbox{
+    background-color:rgb(255, 255, 255);
+    margin-top: 60px;
+    opacity: 1;
+    position: fixed;
+    left: 45%;
+    display: none;
+    width:300px;
+    height: 120px;
+    border: 1px solid rgb(204, 107, 155);
+    box-shadow: 0px 3px 10px rgb(189, 103, 146);
+    border-radius: 5px;
+}
+.sometext{
+   text-align: center;
+   margin: 4px auto;
+   color:rgb(105, 97, 97); 
+}
+.subbtn{
+    text-align: center;
+    margin: 20px auto auto auto;
 }
