--- a/frontend/src/app/c-manage/c-manage.component.html
+++ b/frontend/src/app/c-manage/c-manage.component.html
@@ -5,27 +5,54 @@
     <div class="manage-heading">
         Manage Your Hiring Process  
     </div>
-    <div class="left">
+    <div class="options">
+        <button class="fnbtn" (click)="opencreaatbox()" mat-raised-button color="accent">Create New Job</button>
+        <button class="fnbtn" routerLink="/company/manage/closed" mat-raised-button color="primary">Create New Job</button>
+     </div>
+        <div class="left">
+
         <div class="containt">
             <div class="for">
                 Your Are Receiving from..
             </div>
-            <div class="open" *ngFor="let post of posts">
-                <div class="post">
-                    {{post.post}}
-                </div>
-                <div class="form-area">
-                    <h (click)="formdisplay(post.post)">Application form</h>
-                    <div style="display: none;" [id]="post.post">
-                        <p>hiii</p>
-                        <p>hiii</p>
-                        <p>hiii</p>
+            <div *ngIf=" alljobsdata; else noalldatapresent">
+                <div class="open" *ngFor="let onlinejob of alljobs;let i = index">
+                    <div class="post">
+                        <div class="titleof">
+                            Post:
+                        </div>
+                        {{onlinejob.post}}
                     </div>
-                    <div class="control-btn">
-                        <button class="control" type="button" (click)="stopAccepting(area.post)">Stop Accepting</button>
+                    <div class="fromwhom">
+                        <div class="titleof">
+                            Created By
+                        </div>
+                        {{onlinejob.createdBy}}
+                    </div>
+                    <div class="displayfunction" id="{{i}}" (click)="shoeDetails($event)">
+                        Show/Hide Details
+                    </div>
+                    <div class="form-area" id="form-area{{i}}" >
+                        <div class="titleof">
+                            Description
+                        </div>
+                        {{onlinejob.description}}
+                        <div class="titleof">
+                            Skills
+                        </div>
+                        <ul>
+                       <div *ngFor="let skill of onlinejob.recommended">
+                          <li> {{skill}}</li>
+                       </div>
+                    </ul>
                     </div>
                 </div>
             </div>
+            <ng-template  #noalldatapresent>
+               <div class="notmiswarn">
+                You Have Not Created Any Job
+               </div>
+            </ng-template>
         </div>
     </div>
     <div class="right">
@@ -33,24 +60,109 @@
             <div class="for">
                 Applications
             </div>
-            <div class="all-active" *ngFor="let post of posts">
-                <div class="post">
-                    {{post.post}}
-                </div>
-                <div class="form-area">
-                    <h (click)="displayappl(post.post)">Application Received from...</h>
-                    <div style="display: none;" [id]="post.post+'appl'">
-                       <ul>
-                           <li *ngFor='let applicant of applicants'>
-                               {{applicant.name}}
-                           </li>
-                       </ul>
+            <div *ngIf="isallonlinejobs; else noalldatapresent">
+                <div class="open" *ngFor="let onlinejob of allonlinejobs">
+                    <div class="post">
+                        {{onlinejob.post}}
                     </div>
-                    <div class="control-btn">
-                        <button class="control-del" type="button" (click)="stopAccepting(area.post)">Delete Application</button>
+                    <div class="fromwhom">
+                        {{onlinejob.createdBy}}
+                    </div>
+                    <div class="form-area">
+                       <div *ngFor="let skill of onlinejob.skills">
+                           {{skill}}
+                       </div>
                     </div>
                 </div>
             </div>
+            <ng-template #noalldatapresent>
+                <div class="notmiswarn">
+                    You Have Not Created Any Job
+                   </div>
+            </ng-template>
         </div>
+    </div>
+</div>
+<div id="createjob">
+    <div class="createjob-header">
+        Create New Job Opening
+    </div>
+    <div class="createjob-main">
+        <div class="details-cont">
+            <!-- <mat-form-field class="example-full-width">
+                <mat-label>First name</mat-label>
+                <input matInput>
+              </mat-form-field> -->
+              <label>For Which Position</label>
+              <input class="forpost" [(ngModel)]="post" placeholder="Post">
+              <br>
+              <label>Job Provider's Name </label>
+            <input class="bywhom" [(ngModel)]="createdBy" placeholder="Created By">
+            <br>
+            <br>
+            <label>Description</label>
+            <br>
+            <textarea class="descrip" [(ngModel)]="description" placeholder="Mention Key Feature and some Hiring related detail like process and timing.." rows="5"></textarea>
+            <div class="headskiledit">
+                <label>Skills</label>
+            <br>
+            <input class="enter-skill-input" (keydown.enter)="appendSkill()" placeholder="Add Your Skill" [(ngModel)]="skilltoa">
+            </div>
+            <div class="recomendedskills">
+                <mat-chip-list
+            class="skill-list"
+            cdkDropList 
+            cdkDropListOrientation="horizontal"
+            (cdkDropListDropped)="skill($event)">
+            <mat-chip
+            class="chip"
+            cdkDrag
+            *ngFor="let skill of skills" [id]="skill" (click)="delSkill($event)">
+            {{skill}}
+            </mat-chip>
+            </mat-chip-list>
+            </div>
+            <!-- <mat-form-field>
+            
+        </mat-form-field> -->
+        <br>
+        </div>
+    
+    <div class="datepicking-cont">
+        <mat-form-field appearance="fill">
+            <mat-label>Enter a date range</mat-label>
+            <mat-date-range-input [formGroup]="range" [rangePicker]="picker">
+              <input matStartDate formControlName="start" placeholder="Start date">
+              <input matEndDate formControlName="end" placeholder="End date">
+            </mat-date-range-input>
+            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+            <mat-date-range-picker #picker></mat-date-range-picker>
+          
+            <mat-error *ngIf="range.controls.start.hasError('matStartDateInvalid')">Invalid start date</mat-error>
+            <mat-error *ngIf="range.controls.end.hasError('matEndDateInvalid')">Invalid end date</mat-error>
+          </mat-form-field>
+           
+
+          <!-- <mat-form-field class="example-full-width" appearance="fill">
+           
+            <input matInput [matDatepicker]="picker">
+            <mat-datepicker #picker></mat-datepicker>
+          </mat-form-field> -->
+          <p>Selected range: {{range.value |json}}</p>
+        </div>
+        <div class="function-cont">
+            <button class="fnbtn" (click)="openConfbox()"  mat-stroked-button color="primary">Submit</button>
+            <button class="fnbtn" (click)="backbox()" mat-raised-button color="warn">Back</button>
+        </div>
+    </div>
+</div>
+<div id="confbox">
+    <div class="sometext">
+        Confirm Before Making It Live 
+        <span>You Will Not Be able to edit it in Future</span>
+    </div>
+    <div class="subbtn">
+        <button class="fnbtn" (click)="livetheSearch()"  mat-stroked-button color="accent">Confirm</button>
+        <button class="fnbtn" (click)="backconfbox()"  mat-stroked-button color="primary">Back</button>
     </div>
 </div>
