--- a/frontend/src/app/company-portal/company-portal.component.css
+++ b/frontend/src/app/company-portal/company-portal.component.css
@@ -36,8 +36,7 @@
     border: 4px solid rgb(78, 136, 136);
     height: 150px;
     text-align: center !important;
-    padding:6px 0px 0px 6px;
-    background-image: url("..\..\assets\cancer-hospital.jpg");
+    /* background-image: url("..\..\assets\cancer-hospital.jpg"); */
     border-radius: 50%;
 }
 .dpUp{
@@ -67,15 +66,25 @@
 }
 .about{
     margin-top: 30px;
-    height: 60px;
+    height: auto;
+    min-height: 60px;
     border: 1px solid rgb(136, 136, 136);
     box-shadow: 0px 3px 10px rgb(148, 143, 143);
     color: rgb(143, 125, 125);
     padding: 20px;
     font-size: 25px;
 }
+
 .about-containt{
     color: black;
+    margin-top: 15px;
+    font-size: 20px;
+}
+.abouticoon{
+    float: right;
+}
+.nabout-containt{
+    color: rgb(175, 123, 123);
     margin-top: 15px;
     font-size: 20px;
 }
@@ -106,4 +115,156 @@
   
 .chip .cdk-drop-list-dragging {
     transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
+#editcompo{
+    position: absolute;
+    padding: 20px 20px;
+    left: 20%;
+    border-radius: 5px;
+    text-align: center;
+    display: none;
+    width:700px;
+    background-color: rgb(233, 236, 236);
+    height:350px;
+}
+.divhideedit{
+    display: block;
+    width: 100%;
+    height: 20px;
+}
+.hideedit{
+    float: right;
+    font-size: 20px;
+    font-weight: bolder;
+    cursor: pointer;
+}
+.sideNavi{
+    border-right:1px solid rgb(233, 209, 209);
+    float: left;
+    height: 232px;
+    text-align: left;
+    width: 30%;
+}
+.option{
+    font-size: 30px;
+    text-align: center;
+    background-color: rgb(243, 239, 239);
+    width: 100%;
+    color: rgb(207, 172, 172);
+    padding-top: 30px;
+    height: 46.5px;
+    border-bottom: 1px solid rgb(233, 209, 209);
+}
+.edit{
+    float: left;
+    color: rgb(138, 128, 128);
+    height: 280px;
+    padding-top: 10px;
+    width: 68%;
+    font-size: 30px;
+}
+#name{
+    display: block;
+}
+#location{
+    display: block;
+}
+#skills{
+    display: block;
+}
+#interest{
+    display: block;
+}
+.mini-takeaction{
+    height:280px;
+    width:100%;
+}
+.nameofcondidate{
+    border-top:1px solid transparent;
+    border-right: none;
+    padding: 5px;
+    border-left: none;
+    border-radius: 5px;
+    min-width: 50%;
+    height: 30px;
+}
+.takeactionabout{
+    line-height: 1;
+    margin :20px;
+}
+.takeaction{
+    margin: 30px auto;
+    line-height: 2;
+}
+.backbtn{
+    margin-right: 20px;
+}
+.selectedskills{
+    height:160px;
+    overflow-y: auto;
+    overflow-x: hidden;
+    margin:15px 10px;
+}
+.mini-takeaction-skill{
+    height:280px;
+    width:100%;
+}
+.takeaction-skill{
+    margin: 10px auto;
+    line-height: 1;
+}
+.nameofcondidate-skill{
+    border-top:1px solid transparent;
+    border-right: none;
+    padding: 5px;
+    border-left: none;
+    border-radius: 5px;
+    min-width: 70%;
+    height: 30px;
+}
+.dpPreview{
+    text-align: center;
+    width:50%;
+    height: auto;
+    float: right;
+    position: absolute;
+    left: 20%;
+    display: none;
+    background-color: white;
+}
+.dpc{
+    font-size: 30px;
+    height: auto;
+    line-height: 1;
+    margin: 13px auto;
+}
+.upbtn{
+    height: 40px;
+    margin:5px;
+}
+#aboutedit{
+    position: absolute;
+    padding: 20px 20px;
+    left: 20%;
+    border-radius: 5px;
+    text-align: center;
+    display: none;
+    width:600px;
+    background-color: rgb(233, 236, 236);
+    min-height: 300px;
+    height:auto;
+}
+.abouthead{
+    margin:7px auto;
+    height: 35px;
+    font-size: 30px;
+    padding: 2px;
+}
+.aboutarea{
+    width: 80%;
+    border: 1px solid transparent;
+    padding: 5px;
+    font-size: 15px;
+    border-radius: 5px;
+    height: 200px;
 }
