--- a/frontend/src/app/dev-owner-page/dev-owner-page.component.css
+++ b/frontend/src/app/dev-owner-page/dev-owner-page.component.css
@@ -97,6 +97,21 @@
     margin-top: 15px;
     font-size: 20px;
 }
+.abouticoon{
+    float: right;
+}
+.nabout-containt{
+    color: rgb(175, 123, 123);
+    margin-top: 15px;
+    font-size: 20px;
+}
+.myupload{
+    padding:20px;
+    text-align: center;
+    font-size: 25px;
+    color:rgb(165, 125, 125);
+    
+}
 .skill-show{
     margin-top: 30px;
     border: 1px solid rgb(136, 136, 136);
@@ -124,4 +139,131 @@
   
 .chip .cdk-drop-list-dragging {
     transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
+#editcompo{
+    position: absolute;
+    padding: 20px 20px;
+    left: 20%;
+    border-radius: 5px;
+    text-align: center;
+    display: none;
+    width:700px;
+    background-color: rgb(233, 236, 236);
+    height:350px;
+}
+.divhideedit{
+    display: block;
+    width: 100%;
+    height: 20px;
+}
+.hideedit{
+    float: right;
+    font-size: 20px;
+    font-weight: bolder;
+    cursor: pointer;
+}
+.sideNavi{
+    border-right:1px solid rgb(233, 209, 209);
+    float: left;
+    height: 310px;
+    text-align: left;
+    width: 30%;
+}
+.option{
+    font-size: 30px;
+    text-align: center;
+    background-color: rgb(243, 239, 239);
+    width: 100%;
+    color: rgb(207, 172, 172);
+    padding-top: 30px;
+    height: 46.5px;
+    border-bottom: 1px solid rgb(233, 209, 209);
+}
+.edit{
+    float: left;
+    color: rgb(138, 128, 128);
+    height: 280px;
+    padding-top: 10px;
+    width: 68%;
+    font-size: 30px;
+}
+#name{
+    display: block;
+}
+#location{
+    display: block;
+}
+#skills{
+    display: block;
+}
+#interest{
+    display: block;
+}
+.mini-takeaction{
+    height:280px;
+    width:100%;
+}
+.nameofcondidate{
+    border-top:1px solid transparent;
+    border-right: none;
+    padding: 5px;
+    border-left: none;
+    border-radius: 5px;
+    min-width: 50%;
+    height: 30px;
+}
+.takeaction{
+    margin: 50px auto;
+    line-height: 2;
+}
+.backbtn{
+    margin-right: 20px;
+}
+.selectedskills{
+    height:160px;
+    overflow-y: auto;
+    overflow-x: hidden;
+    margin:15px 10px;
+}
+.mini-takeaction-skill{
+    height:280px;
+    width:100%;
+}
+.takeaction-skill{
+    margin: 10px auto;
+    line-height: 1;
+}
+.nameofcondidate-skill{
+    border-top:1px solid transparent;
+    border-right: none;
+    padding: 5px;
+    border-left: none;
+    border-radius: 5px;
+    min-width: 70%;
+    height: 30px;
+}
+#aboutedit{
+    position: absolute;
+    padding: 20px 20px;
+    left: 20%;
+    border-radius: 5px;
+    text-align: center;
+    display: none;
+    width:600px;
+    background-color: rgb(233, 236, 236);
+    min-height: 300px;
+    height:auto;
+}
+.abouthead{
+    margin:7px auto;
+    height: 35px;
+    font-size: 30px;
+    padding: 2px;
+}
+.aboutarea{
+    width: 80%;
+    border: 1px solid transparent;
+    padding: 5px;
+    border-radius: 5px;
+    height: 200px;
 }
