--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -1,15 +1,41 @@
 <div class="header-body">
     <div class="first-half">
         <div class="search">
-            <input class="searchit" [(ngModel)]="search"  placeholder="Search..." (keyup.enter)="onkeyup()"/>  
+            <input class="searchit" (mouseover)="opensearchresult()" [(ngModel)]="search"  placeholder="Search..." (keyup)="onkeyup()"/>  
         </div>
     </div>
     <div class="second-half">    
-            <mat-icon class="icon" routerLink="/dev/feed" aria-hidden="true" aria-label="home">home</mat-icon>
-            <mat-icon class="icon" routerLink="/dev/:id/network" aria-hidden="false" aria-label="people">people</mat-icon>
-            <mat-icon class="icon" routerLink="/dev/:id/work-related" aria-hidden="false" aria-label="people">work</mat-icon>
-            <mat-icon class="icon" routerLink="/dev/:id/notification" aria-hidden="false" aria-label="notification">notifications</mat-icon>
+            <mat-icon class="icon" routerLink="/feed" aria-hidden="true" aria-label="home">home</mat-icon>
+            <mat-icon class="icon" routerLink="/network" aria-hidden="false" aria-label="people">people</mat-icon>
+            <mat-icon class="icon" routerLink="/work-related" aria-hidden="false" aria-label="people">work</mat-icon>
+            <mat-icon class="icon" routerLink="/notification" aria-hidden="false" aria-label="notification">notifications</mat-icon>
             <mat-icon class="icon" routerLink="/message" aria-hidden="false" aria-label="message">message</mat-icon>
-            <mat-icon class="icon" routerLink="/dev/:id" aria-hidden="false" aria-label="message">mood</mat-icon>
+            <mat-icon class="icon" routerLink="/profile" aria-hidden="false" aria-label="message">mood</mat-icon>
+    </div>
+</div>
+<div id="sidesearchreasult">
+    <div class="close" (click)="hidesearchresult()">
+        ~~~~~~~~~BACK~~~~~~~~~
+    </div>
+    <div class="fordev">
+       
+        <div class="user" (click)="nevigateToDevById($event)" *ngFor="let usere of userstos" [id]="usere._id">
+            <div class="fordp">
+                <img (click)="nevigateToDevById($event)" [id]="usere._id" class="imagee" [src]="usere.dpo">
+            </div>
+            <div (click)="nevigateToDevById($event)"  [id]="usere._id" class="forname">
+                {{usere.name}} 
+            </div>
+        </div>     
+    </div>
+    <div class="forcomp">
+        <div class="user" (click)="nevigateToCompById($event)" *ngFor="let comp of compstos" [id]="comp._id">
+            <div class="fordp">
+                <img (click)="nevigateToCompById($event)"  [id]="comp._id" class="imagee" [src]="comp.dpo">
+            </div>
+            <div (click)="nevigateToCompById($event)"  [id]="comp._id" class="forname">
+                {{comp.title}} 
+            </div>
+        </div>  
     </div>
 </div>
