--- a/frontend/src/app/jobpage/jobpage.component.html
+++ b/frontend/src/app/jobpage/jobpage.component.html
@@ -9,23 +9,62 @@
         <div class="containt">
             <div class="for">
                 New Openings From the Subscribed Companies
+                <br>
+                <button class="fnbtn" (click)="Shortthem()" mat-raised-button color="accent">Short Them</button>
+                       
             </div>
-            <div class="open" *ngFor="let post of posts">
-                <div class="post">
-                    {{post.post}}
-                </div>
-                <div class="form-area">
-                    <h (click)="formdisplay(post.post)">Application form</h>
-                    <div style="display: none;" [id]="post.post">
-                        <p>hiii</p>
-                        <p>hiii</p>
-                        <p>hiii</p>
-                        <div class="control-btn">
-                            <button class="control" type="button" (click)="stopAccepting(area.post)">Submit Form</button>
+            <div *ngIf="isAlljobs; else noalldatapresent">
+                <div class="open" *ngFor="let jobs of alljobs;let i = index">
+                    <div class="post">
+                        <div class="titleof">
+                            Post:
                         </div>
+                        {{jobs.post}}
+                    </div>
+                    <div class="fromwhom">
+                        <div class="titleof">
+                            Created By
+                        </div>
+                        {{jobs.createdBy}}
+                    </div>
+                    <div class="titleof">
+                        Start At: {{jobs.selectedRange.start}}
+                        <span>---</span>
+                        Ends At: {{jobs.selectedRange.end}}
+                    </div>
+                    <div class="displayfunction" id="{{i}}" (click)="shoeDetails($event)">
+                        Show/Hide Details
+                    </div>
+                    <div class="form-area" id="form-area{{i}}" >
+                        <div class="titleof">
+                            Description
+                        </div>
+                        {{jobs.description}}
+                        <div class="titleof">
+                            Skills
+                        </div>
+                        <ul>
+                       <div *ngFor="let skill of jobs.recommended">
+                          <li> {{skill}}</li>
+                       </div>
+                    </ul>
+                    </div>
+                    <div class="fnbtn">
+                        <div *ngIf="jobs.isapplied else notyet">
+                            <button class="fnbtn" mat-raised-button color="accent">Have Apllied</button>
+                        </div>
+                        <ng-template #notyet>
+                            <button class="fnbtn" [id]="jobs._id" (click)="applyjob($event)" mat-raised-button color="primary"><span [id]="jobs._id">Apply</span></button>
+                        </ng-template>
+                        
                     </div>
                 </div>
             </div>
+            <ng-template #noalldatapresent>
+                <div class="notmiswarn">
+                    No jobs From any subscribed Company..Follow more Companies For better opportunity
+                </div>
+            </ng-template>
         </div>
     </div>
     <div class="right">
@@ -33,68 +72,54 @@
             <div class="for">
                 Applied In..
             </div>
-            <div class="all-active" *ngFor="let post of posts">
-                <div class="post">
-                    {{post.post}}
-                </div>
-                <div class="form-area">
-                    <h (click)="displayappl(post.post)">Application Received from...</h>
-                    <div style="display: none;" [id]="post.post+'appl'">
-                       <ul>
-                           <li *ngFor='let applicant of applicants'>
-                               {{applicant.name}}
-                           </li>
-                       </ul>
+            <div *ngIf="isApplied else notapplied">
+                <div class="all-active" *ngFor="let jobs of appliedjobs">
+                    <div class="post">
+                        <div class="titleof">
+                            Post:
+                        </div>
+                        {{jobs.post}}
                     </div>
-                    <div class="control-btn">
-                        <button class="control-del" type="button" (click)="stopAccepting(area.post)">Take Application Back</button>
+                    <div class="fromwhom">
+                        <div class="titleof">
+                            Created By
+                        </div>
+                        {{jobs.createdBy}}
+                    </div>
+                    <div class="displayfunction" id="{{i}}" (click)="shoeDetailsappliedIn($event)">
+                        Show/Hide Details
+                    </div>
+                    <div class="detail-area" id="detail-area{{i}}" >
+                        <div class="titleof">
+                            Description
+                        </div>
+                        {{jobs.description}}
+                        <div class="titleof">
+                            Skills
+                        </div>
+                        <ul>
+                       <div *ngFor="let skill of jobs.recommended">
+                          <li> {{skill}}</li>
+                       </div>
+                    </ul>
                     </div>
                 </div>
-            </div>
+            </div> 
+            <ng-template #notapplied>
+                <div class="notmiswarn">
+                    You have not applied for any job....Seek more Comapnies And apply in them
+                </div>
+            </ng-template>
         </div>
-        <div class="containt">
-            <div class="for">
-                Application Closed For..
-                <br>
-                <p3 style="font-size: 10px; color: brown;">*Cannot take any application back</p3>  
-            </div>
-            <div class="all-active" *ngFor="let post of posts">
-                <div class="post">
-                    {{post.post}}
-                </div>
-                <div class="form-area">
-                    <h (click)="displayappl(post.post)">Application Received from...</h>
-                    <div style="display: none;" [id]="post.post+'appl'">
-                       <ul>
-                           <li *ngFor='let applicant of applicants'>
-                               {{applicant.name}}
-                           </li>
-                       </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="containt">
-            <div class="for">
-                Accepted Applications
-                <br>
-                <p3 style="font-size: 10px; color: brown;">Congratulations...</p3>  
-            </div>
-            <div class="all-active" *ngFor="let post of posts">
-                <div class="post">
-                    {{post.post}}
-                </div>
-                <div class="form-area">
-                    <h (click)="displayappl(post.post)">Application Received from...</h>
-                    <div style="display: none;" [id]="post.post+'appl'">
-                       <ul>
-                           <li *ngFor='let applicant of applicants'>
-                               {{applicant.name}}
-                           </li>
-                       </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
+    </div>
+</div>
+<div id="confbox">
+    <div class="sometext">
+        Confirm Before Apply 
+        <span>You Will Not Be able to edit it in Future</span>
+    </div>
+    <div class="subbtn">
+        <button class="fnsbtn" (click)="ApplyNow()"  mat-stroked-button color="accent">Confirm</button>
+        <button class="fnsbtn" (click)="backconfbox()"  mat-stroked-button color="primary">Back</button>
     </div>
 </div>
