--- a/frontend/src/app/sign-log-company/sign-log-company.component.css
+++ b/frontend/src/app/sign-log-company/sign-log-company.component.css
@@ -1,6 +1,13 @@
 body{
     height: 100vh;
 }
+button{
+    margin-top: 20px;
+    background-color: rgb(152, 210, 236);
+    width: auto;
+    font-size: 20px;
+    border-radius: 5px;
+}
 .main-container{
 
     width: 100%;
@@ -10,18 +17,22 @@ body{
 #wrapper{
     background-color: whitesmoke;
     width: 40%;
+    height: auto;
     border: 1px solid rgb(218, 208, 208);
     margin: 100px 30% 40px 30%;
     left: 30%;
 }
 .main-container-header{
    width: 100%;
-   height: 50px;
+   height: auto;
    font-size: 19px;
    font-family: SimSun-ExtB;
 }
 form{
+    height: auto;
     width: 100%;
+    font-size: 20px;
+    padding: 10px 30px 40px 0px;
 }
 #log-tag{
     padding-top: 16px;
@@ -36,10 +47,13 @@ form{
     height: 50px;
     display: inline-block;
 }
-
+.namediv{
+    line-height: .8;
+    margin-bottom: 4px;
+}
 #logIn-form{
     width: 100%;
-    height: 200px;
+    height: auto;
     display: block;
 }
 #logIn-form input{
