--- a/frontend/src/app/sign-log-company/sign-log-company.component.html
+++ b/frontend/src/app/sign-log-company/sign-log-company.component.html
@@ -1,55 +1,64 @@
-
 <body>
-   
-    <div class="main-container">
-      <div class="heading">
-        <h>Web Name</h>
-        <h1>For Developer</h1>
-        <h2>You Are A Step Away From Glory</h2>
+  <div class="main-container">
+    <div class="heading">
+      <h>Web Name</h>
+      <h1>Join As Company</h1>
+      <h2>You Are A Step Away From Glory</h2>
+    </div>
+    <div id="wrapper">
+      <div class="main-container-header">
+        <p id="log-tag" (click)="headTologForm()">
+          Log In
+        </p>
+        <p id="sign-tag" (click)="headTosignForm()">
+          Sign In
+        </p>
+        
       </div>
-      <div id="wrapper">
-        <div class="main-container-header">
-          <p id="log-tag" (click)="headTologForm()">
-            Log In
-          </p>
-          <p id="sign-tag" (click)="headTosignForm()">
-            Sign In
-          </p>
-          
-        </div>
-        <br>
-        <div id="logIn-form">
-          <form (submit)="logIn($event)">
-            <Label>Email:   </Label>
+      <br>
+      <div id="logIn-form">
+        <form class="form" (submit)="logIn()">
+          <Label>Email:   </Label>
+          <br>
+          <input [(ngModel)]="loginUserData.email" required  type="email"  size="60%" [ngModelOptions]="{standalone: true}" placeholder="email">
+          <br>
+          <br>
+          <br>
+          <label>Password:</label>
+          <br>
+          <input [(ngModel)]="loginUserData.password" required [ngModelOptions]="{standalone: true}" size="60%" placeholder="password...">
+          <br>
+          <button type="submit">LogIn</button>
+        </form>
+      </div>
+      <div id="signUp-form">
+        <form (submit)="signUp()">
+          <div class="namediv">
+            <Label>Name:</Label>
             <br>
-            <input required class="email" type="email"  size="80%" name="email" placeholder="email">
-            <br>
-            <br>
-            <br>
-            <label>Password:</label>
-            <br>
-            <input required class="password" id="password" size="80%" placeholder="password...">
-            <br>
-            <button type="submit">LogIn</button>
-          </form>
-        </div>
-        <div id="signUp-form">
-          <form (submit)="signUp($event)">
-            <Label>Email:   </Label>
-            <br>
-            <input required class="email" type="email" size="80%" name="email" placeholder="email">
-            <br>
-            <label>Password:</label>
-            <br>
-            <input required class="password" id="password" size="80%" placeholder="password...">
-            <br>
-            <label>Confirm Password:</label>
-            <br>
-            <input required class="confirmPassword" size="80%" id="confirmPassword" placeholder="confirm password...">
-            <br>
-            <button type="submit">Sign Up</button>
-          </form>
-        </div>
+            <span style="color: red; font-size: xx-small;">*cannot be changed later</span> 
+          </div>  
+          <input [(ngModel)]="registerUserData.title" required [ngModelOptions]="{standalone: true}" size="60%" placeholder="Full Name">
+          <br>
+          <Label>Region:   </Label>
+          <br>
+          <input required  [(ngModel)]="registerUserData.region" [ngModelOptions]="{standalone: true}" type="email" size="60%"  placeholder="Region">
+          <br>
+          <Label>Email:   </Label>
+          <br>
+          <input required  [(ngModel)]="registerUserData.email" [ngModelOptions]="{standalone: true}" type="email" size="60%"  placeholder="email">
+          <br>
+          <label>Password:</label>
+          <br>
+          <input required  [(ngModel)]="registerUserData.password" [ngModelOptions]="{standalone: true}"  size="60%" placeholder="password...">
+          <br>
+          <label>Confirm Password:</label>
+          <br>
+          <input required  [(ngModel)]="registerUserData.confirmPassword" [ngModelOptions]="{standalone: true}" size="60%" placeholder="confirm password...">
+          <br>
+          <button type="submit" >Sign Up</button>
+        </form>
       </div>
     </div>
-  </body>
+  </div>
+</body>
